<resources>
    <string name="app_name">Story Scape</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account? </string>
    <string name="signup">Sign Up</string>
    <string name="your_name">Your name</string>
    <string name="already_have_account">Already have account? </string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="publish">Publish</string>
    <string name="story_hint_text">Let your creativity flow! Use this space to write a narrative that takes us on a journey through your imagination.</string>
    <string name="add_cover_page">Add cover page</string>
    <string name="proceed_to_write">Proceed to write</string>
    <string name="story_description_hint">Write a short description of the story</string>
    <string name="story_title_hint">A beautiful title</string>
    <string name="community">Community</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="hey_good_to_see_you_again">Hey! Good to see you again.</string>
    <string name="add_to_library">Add to library</string>
    <string name="share">Share</string>
    <string name="written_by">Written by</string>
    <string name="author_name" formatted="true">by %s</string>
    <string name="follow">Follow</string>
    <string name="genre">Genre</string>
    <string name="start_reading">Start Reading</string>
    <string name="read_more">Read more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="my_publications">My publications</string>
    <string name="my_library">My library</string>
    <string name="remove_from_library">Remove from library</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comments">Comments</string>
    <string name="rating">Rating</string>
    <string name="rate_this_story">Rate this story</string>
    <string name="discard">Discard</string>
    <string name="done">Done</string>
    <string name="total_rating_format" formatted="true">Total rating (%s)</string>
    <string name="delete">Delete</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="update">Update</string>
    <string name="profile_updated_successfully">Profile updated successfully!</string>
    <string name="please_wait">Please wait</string>
    <string name="search_a_story">Search a story</string>
    <string name="genre_colon">Genre:</string>
    <string name="recommended">Recommended</string>
    <string name="view_all">View all</string>
    <string name="top_rated">Top rated</string>
    <string name="new_releases">New releases</string>
</resources>