<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="8dp"
    tools:context=".ui.profile.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:shapeAppearance="@style/CircleShapeAppearance"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                tools:text="@tools:sample/full_names" />


            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.66"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                tools:text="abc@xyz.com" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        android:text="@string/edit_profile"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?android:textColorSecondary"
        app:icon="@drawable/ic_edit"
        app:iconTint="?android:textColorSecondary" />

    <LinearLayout
        android:id="@+id/my_library_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_library_filled"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_library"
            android:textAppearance="?attr/textAppearanceTitleSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_publications_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_book"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_publications"
            android:textAppearance="?attr/textAppearanceTitleSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_logout"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAppearance="?attr/textAppearanceTitleSmall" />
    </LinearLayout>
</LinearLayout>